--- a/src/app/modules/shared/assign-unassign/assign-unassign.component.html
+++ b/src/app/modules/shared/assign-unassign/assign-unassign.component.html
@@ -1,11 +1,11 @@
 <div class="cdk-drag-drop-wrapper">
     <mat-form-field floatLabel="always" class="filter">
-      <mat-label i18n>Filtr</mat-label>
+      <mat-label>Filtr</mat-label>
       <input matInput [formControl]="filter" autocomplete="off">
     </mat-form-field>
     <div class="cdk-drag-drop-content">
       <div class="cdk-drag-drop-side">
-        <h3 class="title" i18n>Nieprzypisane</h3>
+        <h3 class="title">Nieprzypisane</h3>
         <div cdkDropList #assignedList="cdkDropList" [cdkDropListData]="unassigned"
           [cdkDropListConnectedTo]="unassignedList" (cdkDropListDropped)="drop($event)"
           [ngClass]="'count-'+unassigned.length">
@@ -16,7 +16,7 @@
         </div>
       </div>
       <div class="cdk-drag-drop-side">
-        <h3 class="title" i18n>Przypisane</h3>
+        <h3 class="title">Przypisane</h3>
         <div cdkDropList #unassignedList="cdkDropList" [cdkDropListData]="assigned"
           [cdkDropListConnectedTo]="assignedList" (cdkDropListDropped)="drop($event)"
           [ngClass]="'count-'+assigned.length">
